--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+$ rm .git/index
+$ git reset 
+$ git status
+$ git add -u
+$ git commit -m
